# score_inc_someip_gateway

./: .bazelrc  .gitignore  .pre-commit-config.yaml  .shellcheckrc  AGENTS.md  BUILD  BUILD.bazel  MODULE.bazel  README.md  REUSE.toml  pyproject.toml  python_requirements_lock.txt  run_coverage_local.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_fix.md
.github/instructions/: agent-behavior.md  architecture.md  build-and-test.md  code-style.md  contributing.md  project-structure.md
.github/workflows/: build_and_test_cross_compilation.yml  build_and_test_host.yml  build_and_test_qemu.yml  build_and_test_qnx.yml  cache_maintenance.yml  ci.yml  ci_pull_request_target.yml  copyright.yml  docs-cleanup.yml  docs.yml  format.yml  license_check.yml  pre-commit.yml
bazel/tools/: BUILD.bazel  json_schema_validator.bzl  someip_config.bzl  someip_config_rule.bzl
bazel/tools/validators/: BUILD.bazel  json_schema_validator.sh
deployment/: BUILD.bazel  run_gateway.sh
deployment/qemu/: BUILD.bazel  init_a.build  init_b.build  init_x86_64.build  run_qemu.sh  run_qemu1_manual.sh  run_qemu2_manual.sh  setup_bridge.sh  setup_qemu_1.sh  setup_qemu_2.sh  tools.build
deployment/qemu/configs/: BUILD.bazel  group  network_setup.sh  passwd  profile  ssh_host_rsa_key  ssh_host_rsa_key.pub  sshd_config  startup.sh
docs/: gateway_ipc_binding  index.rst
docs/architecture/: components.rst  features.rst  index.rst  tc8_conformance_testing.rst
docs/arxml-studies/: arxml_config_serializer_correlation.md  arxml_datatype_analysis.md  arxml_overview.md  arxml_to_json_schema.md
docs/requirements/: index.rst
docs/serializer_proto/: com-aap-comm-manager-config.md  serializer_asil_plugin_study.md  serializer_class_diagram.md  serializer_diagrams.md  serializer_diagrams_part1.md  serializer_diagrams_part2.md  serializer_diagrams_part3.md  serializer_plugin_integration_options.md
docs/tc8_conformance/: index.rst  requirements.rst  test_specification.rst  traceability.rst
examples/car_window_sim/: BUILD.bazel
examples_serializers/: BUILD.bazel  INTEGRATION_SUMMARY.md  demo_all_serializers.sh  serializer_plugin_test.cpp
examples_serializers/car_window_sim/: BUILD.bazel  README.md
examples_serializers/serializer_plugin_common/: BUILD.bazel  common.hpp
examples_serializers/serializer_plugin_dlopen/: BUILD.bazel  main.cpp  plugin_abi.h  plugin_big_endian.cpp
examples_serializers/serializer_plugin_ipc/: BUILD.bazel  ipc_protocol.hpp  main.cpp  serializer_child.cpp
examples_serializers/serializer_plugin_service/: BUILD.bazel  main.cpp
examples_serializers/serializer_plugin_static/: BUILD.bazel  main.cpp
memory_profile/: README.md  massif.out.1
profiling/: benchmark_event_transmission_client_to_server_analysis.md
quality/: README.md
quality/integration_testing/: integration_testing.bzl
src/Serializer_prototypes/serializer/: AppErrorSerializers.hpp  BUILD.bazel  DeserializeBasicTypes.hpp  IDeserializer.hpp  SerializerTypes.hpp  SerializerUtils.hpp
src/Serializer_prototypes/serializer_decoratorbased_test/: ARCHITECTURE.md  BUILD.bazel  abstract_app_factory.h  base_type_serializers.h  car_window_arxml_factory_demo.cpp  car_window_factory.h  extended_serializer_test.cpp  serializer_types.h
src/config/: BUILD.bazel  mw_someip_config.fbs
src/gateway_ipc_binding/: README.md  index.rst
src/gatewayd/: BUILD.bazel  local_service_instance.cpp  local_service_instance.h  main.cpp  remote_service_instance.cpp  remote_service_instance.h
src/gatewayd/etc/: gatewayd_config.fbs  gatewayd_config.json  gatewayd_config.schema.json  mw_com_config.json
src/network_service/: BUILD.bazel
src/serializer/: BUILD.bazel  null_serializer.cpp  pre_serialized_data.h  serializer.h
src/socom/: BUILD
src/someipd/: BUILD.bazel  local_network_service.cpp  local_network_service.h  main.cpp  remote_network_service.cpp  remote_network_service.h  routing.cpp  vsomeip_config_reader.cpp  vsomeip_config_reader.h  vsomeip_network_server.cpp  vsomeip_network_server.h
tests/: BUILD.bazel
tests/UT/: BUILD.bazel  conftest.py  test_ut.py
tests/UT/LocalServiceInstance_UT/: BUILD.bazel  LocalServiceInstance_UT.cpp
tests/UT/RemoteServiceInstance_UT/: BUILD.bazel  RemoteServiceInstance_UT.cpp
tests/UT/UnitTest_UT/: BUILD.bazel  test_main.cpp
tests/UT/UnitTest_UT1/: BUILD.bazel  test_main.cpp
tests/UT/UnitTest_UT2/: BUILD.bazel  test_main.cpp
tests/UT/mocks/: BUILD.bazel  mock_ara_com_types.h  mock_config_builder.h
tests/benchmarks/: BUILD.bazel  benchmarks_analysis.md  echo_service.h  ipc_benchmarks.cpp
tests/common/: BUILD  capture.py  test_capture.py
tests/cpp/: BUILD.bazel
tests/integration/: BUILD.bazel  analyze_pcap_someip.py  conftest.py  someip_integration.py  someip_network_analyzer.py  test_qemu_gatewayd.py  test_qemu_network.py  test_ssh.py  vsomeip.json
tests/integration/configs/: BUILD.bazel  qemu_a.json  qemu_b.json
tests/integration/docker_setup/: docker-compose.yaml  entrypoint-master  readme.md
tests/integration/sample_client/: BUILD.bazel  vsomeip.json
tests/integration_test/: BUILD  README.md  conftest.py  (+7 more)
tests/itf/: BUILD.bazel  conftest.py  test_itf_dummy.py
tests/itf_updates/: BUILD.bazel  qemu_utils.py
tests/itf_updates/dual_qemu/: BUILD.bazel  dual_qemu_plugin.py
tests/tc8_conformance/: BUILD.bazel  README.md  conftest.py  tc8_net_wrapper.sh  test_event_notification.py  test_field_conformance.py  test_multi_service.py  test_sd_client.py  test_sd_format_compliance.py  test_sd_phases_timing.py  test_sd_reboot.py  test_sd_robustness.py  test_service_discovery.py  test_someip_message_format.py
tests/tc8_conformance/application/: README.md
tests/tc8_conformance/config/: tc8_someipd_config.schema.json  tc8_someipd_multi.json  tc8_someipd_sd.json  tc8_someipd_service.json
tests/tc8_conformance/helpers/: __init__.py  constants.py  event_helpers.py  field_helpers.py  message_builder.py  sd_helpers.py  sd_malformed.py  sd_sender.py  someip_assertions.py  tcp_helpers.py  timing.py  udp_helpers.py
(+76 files in other folders)
