# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

# This files allows to access the rules and macros like this:
#
# load("@score_someip_gateway//bazel/tools:someip_config.bzl", "...")
#
# instead of this:
#
# load("@score_someip_gateway//:bazel/tools/someip_config.bzl", "...")
