# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

# QNX IFS images for the SOME/IP Gateway integration tests.
# init_a / init_b boot identical gateways with hardcoded IPs 192.168.87.2 / .3.

load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files", "strip_prefix")
load("@score_rules_imagefs//rules/qnx:ifs.bzl", "qnx_ifs")

_EXEC = pkg_attributes(mode = "0755")
_DATA = pkg_attributes(mode = "0644")

pkg_files(
    name = "gateway_binaries_pkg",
    srcs = [
        "//src/gatewayd",
        "//src/someipd",
        "//tests/integration/sample_client",
    ],
    attributes = _EXEC,
    prefix = "/usr/bin",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "gateway_libs_pkg",
    srcs = ["@vsomeip"],
    attributes = _DATA,
    prefix = "/usr/lib",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "gateway_configs_pkg",
    srcs = [
        "//src/gatewayd:config_file",
        "//src/gatewayd:etc/mw_com_config.json",
    ],
    attributes = _DATA,
    prefix = "/etc/gatewayd",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "someipd_configs_pkg",
    srcs = [
        "//src/someipd:etc/mw_com_config.json",
        "//tests/integration:vsomeip.json",
    ],
    attributes = _DATA,
    prefix = "/etc/someipd",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "sample_client_configs_pkg",
    srcs = ["//tests/integration/sample_client:vsomeip.json"],
    attributes = _DATA,
    prefix = "/etc/sample_client",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "benchmark_binaries_pkg",
    srcs = [
        "//tests/performance_benchmarks:echo_server",
        "//tests/performance_benchmarks:ipc_benchmarks",
    ],
    attributes = _EXEC,
    prefix = "/usr/bin/tests",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "benchmark_configs_pkg",
    srcs = ["//tests/performance_benchmarks:config/benchmark_mw_com_config.json"],
    attributes = _DATA,
    prefix = "/etc/benchmarks",
    strip_prefix = strip_prefix.files_only(),
)

_IFS_SRCS = [
    ":gateway_binaries_pkg",
    ":gateway_libs_pkg",
    ":gateway_configs_pkg",
    ":someipd_configs_pkg",
    ":sample_client_configs_pkg",
    ":benchmark_binaries_pkg",
    ":benchmark_configs_pkg",
]

_IFS_EXTRA_BUILD_FILES = ["tools.build"]

_IFS_PLATFORM = [
    "@platforms//cpu:x86_64",
    "@platforms//os:qnx",
]

_IFS_VISIBILITY = [
    "//deployment:__subpackages__",
    "//tests:__subpackages__",
]

qnx_ifs(
    name = "init_a",
    testonly = True,
    srcs = _IFS_SRCS,
    out = "someip_gateway_x86_64_a.ifs",
    build_file = "init_a.build",
    extra_build_files = _IFS_EXTRA_BUILD_FILES,
    target_compatible_with = _IFS_PLATFORM,
    visibility = _IFS_VISIBILITY,
)

qnx_ifs(
    name = "init_b",
    testonly = True,
    srcs = _IFS_SRCS,
    out = "someip_gateway_x86_64_b.ifs",
    build_file = "init_b.build",
    extra_build_files = _IFS_EXTRA_BUILD_FILES,
    target_compatible_with = _IFS_PLATFORM,
    visibility = _IFS_VISIBILITY,
)
