# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "plugin_abi",
    hdrs = ["plugin_abi.h"],
)

# The plugin .so — compiled as a shared library.
cc_binary(
    name = "libbig_endian_plugin.so",
    srcs = ["plugin_big_endian.cpp"],
    linkshared = True,
    visibility = ["//visibility:public"],
    deps = [":plugin_abi"],
)

# The host binary — loads the plugin at runtime.
cc_binary(
    name = "dlopen_demo",
    srcs = ["main.cpp"],
    linkopts = ["-ldl"],
    deps = [":plugin_abi"],
)
