# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@score_itf//:defs.bzl", "py_itf_test")

# ---------------------------------------------------------------------------
# C++ unit test execution on QNX QEMU image
# Requires QEMU to be running: bazel run //deployment/qemu:run_qemu --config=x86_64-qnx
# Then run: bazel test //tests/UT:test_ut --test_output=all
# ---------------------------------------------------------------------------
py_itf_test(
    name = "test_ut",
    srcs = [
        "conftest.py",
        "test_ut.py",
    ],
)
