# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************



load("@bazel_tools_python//quality:defs.bzl", "py_pytest")
load("@score_itf//:defs.bzl", "py_itf_test")
load("@score_itf//score/itf/plugins:plugins.bzl", "qemu")
load("@score_toolchains_qnx//rules/fs:ifs.bzl", "qnx_ifs")

# py_itf_test(
#     name = "test_ut",
#     srcs = ["test_ut.py"],
#     tags = [
#         "manual",  # Requires pre-started QEMU
#         "qemu",
#     ],
# )


py_itf_test(
    name = "test_ut",
    srcs = [
        # "conftest.py",
        "test_ut.py",
        # "test_qemu_network",
        # "//tests/itf_updates:qemu_utils.py",
    ],
    args = [
        "--qemu-config=$(location qemu_config.json)",
        "--qemu-image=$(location //deployment/qemu:someip_gateway_ifs)",
    ],
    data = [
        "qemu_config.json",
        "//deployment/qemu:someip_gateway_ifs",
    ],
    plugins = [qemu],
    tags = ["qemu"],
)
