# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@score_itf//:defs.bzl", "py_itf_test")
load("@score_itf//score/itf/plugins:plugins.bzl", "qemu")

# Export vsomeip config for QEMU deployment
exports_files(
    ["vsomeip.json"],
    visibility = ["//visibility:public"],
)

#ITF starts QEMU image
py_itf_test(
    name = "test_qemu_network_single",
    srcs = [
        "conftest.py",
        "test_qemu_network.py",
        "//tests/itf_updates:qemu_utils.py",
    ],
    args = [
        "-k", "TestSingleInstanceNetwork",
        "--qemu-config=$(location qemu_config.json)",
        "--qemu-image=$(location //deployment/qemu:someip_gateway_ifs)",
    ],
    data = [
        "qemu_config.json",
        "//deployment/qemu:someip_gateway_ifs",
    ],
    plugins = [qemu],
    tags = ["qemu"],
)

# Dual instance test - ITF cannot start 2 instances in parallel, so uses qemu_utils.py to manage both instances within a single test
py_itf_test(
    name = "test_qemu_network_dual",
    srcs = [
        "conftest.py",
        "test_qemu_network.py",
        "//tests/itf_updates:qemu_utils.py",
    ],
    args = [
        "-k", "TestDualInstanceNetwork",
    ],
    data = [
        "//deployment/qemu:someip_gateway_ifs",
        "//deployment/qemu:run_qemu.sh",
    ],
    plugins = [],  # No qemu plugin - uses qemu_utils.py for dual instance management
    tags = ["qemu"],
)
