# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@bazel_tools_python//quality:defs.bzl", "py_pytest")
load("@score_itf//:defs.bzl", "py_itf_test")

# Export vsomeip config for QEMU deployment
exports_files(
    ["vsomeip.json"],
    visibility = ["//visibility:public"],
)

# SOME/IP Service Discovery test - captures traffic and verifies SD offers/finds/subscriptions
py_itf_test(
    name = "someip_integration_tests",
    srcs = [
        "someip_integration.py",
        "someip_network_analyzer.py",
        "//tests/itf_updates:qemu_utils.py",
    ],
    args = [
        "-k",
        "TestSomeIPSD",
        "-s",
    ],
    data = [
        "//deployment/qemu:run_qemu.sh",
        "//deployment/qemu:someip_gateway_ifs",
    ],
    plugins = [],  # No qemu plugin - uses qemu_utils.py for dual instance management
    tags = [
        "exclusive",
        "qemu",
        "qemu-x86_64",
    ],
    deps = ["@score_someip_gateway_pip//scapy"],
)
