# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load("@score_itf//:defs.bzl", "py_itf_test")

# Export vsomeip config for QEMU deployment
exports_files(
    ["vsomeip.json"],
    visibility = ["//visibility:public"],
)

# SOME/IP Service Discovery test - captures traffic and verifies SD offers/finds/subscriptions
py_itf_test(
    name = "someip_integration_tests",
    srcs = [
        "someip_integration.py",
        "someip_network_analyzer.py",
    ],
    args = [
        "-k",
        "TestSomeIPSD",
        "-s",
        "--qemu-config-a=$(location //tests/integration/configs:qemu_a)",
        "--qemu-config-b=$(location //tests/integration/configs:qemu_b)",
        "--qemu-image-a=$(location //deployment/qemu:init_a)",
        "--qemu-image-b=$(location //deployment/qemu:init_b)",
    ],
    data = [
        "//deployment/qemu:init_a",
        "//deployment/qemu:init_b",
        "//tests/integration/configs:qemu_a",
        "//tests/integration/configs:qemu_b",
    ],
    plugins = [
        "//tests/itf_updates/dual_qemu:dual_qemu_plugin",
    ],
    tags = [
        "exclusive",
        "qemu",
        "qemu-x86_64",
    ],
    deps = ["@score_someip_gateway_pip//scapy"],
)
