# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

exports_files(
    [
        "qemu_utils.py",
    ],
    visibility = ["//tests:__subpackages__"],
)

py_library(
    name = "itf_updates",
    srcs = [
        "qemu_utils.py",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
    visibility = ["//tests:__subpackages__"],
)
